...
    private lazy var fullNameTextField: UITextField = {
        let textField = ProfileNameTextField()
        textField.placeholder = "Name"
        textField.isEnabled = false
        textField.delegate = self
        textField.addTarget(self, action: #selector(textFieldsEditingChanged), for: .editingChanged)
        textField.accessibilityLabel = "ProfileFullNameTextField"
        return textField
    }()
    
    private lazy var descriptionTextField: UITextField = {
        let textField = ProfileDescriptionTextField()
        textField.placeholder = "Profile information"
        textField.isEnabled = false
        textField.delegate = self
        textField.addTarget(self, action: #selector(textFieldsEditingChanged), for: .editingChanged)
        textField.accessibilityLabel = "ProfileDescriptionTextField"
        return textField
    }()
    
    private lazy var editAvatarButton: UIButton = {
        let button = UIButton().prepareForAutoLayout()
        button.titleLabel?.font = Fonts.buttonTitle
...
        return button
    }()
    
    private lazy var editProfileButton: UIButton = {
        let button = ProfileFilledButton(withTitle: "Edit profile")
        button.addTarget(self, action: #selector(editProfileButtonTapped), for: .touchUpInside)
        button.accessibilityLabel = "ProfileEditProfileButton"
        return button
    }()
    
    private lazy var buttonsStackView: UIStackView = {
        let stackView = UIStackView().prepareForAutoLayout()
        stackView.axis = .vertical
...
