...
        let button = UIButton()
        button.widthAnchor.constraint(equalToConstant: size.width).isActive = true
        button.heightAnchor.constraint(equalToConstant: size.height).isActive = true
        button.addTarget(self, action: #selector(self.openProfileBarButtonTapped), for: .touchUpInside)
        button.setImage(UIImage(data: iconData), for: .normal)
        button.setCornerRadius(size.width / 2, continuousCurve: false)
        button.accessibilityLabel = "OpenProfileBarButton"
        
        return UIBarButtonItem(customView: button)
    }
}

// MARK: - ChannelListDisplayLogic
...
